Made lots of improvements to Readme and added root endpoint and some configs
